--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --primario: #784d3c;
     --blanco: #fff;
     --negro: #000;
+    --gris: #e1e1e1;
 }
 
 html {
@@ -97,6 +98,7 @@ img {
     }
 }
 
+/* Logo */
 .logo {
     color: var(--blanco);
 }
@@ -109,7 +111,7 @@ img {
     font-weight: 700;
 }
 
-
+/* Navegación */
 @media (min-width: 768px) {
     .navegacion {
         display: flex;
@@ -122,4 +124,43 @@ img {
     text-align: center;
     font-size: 1.8rem;
     color: var(--blanco);
+}
+
+/* main (index), article */
+@media (min-width: 768px) {
+    .contenido-principal {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 2rem;
+    }
+}
+
+.entrada {
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+.entrada:last-of-type {
+    border: none;
+    margin-bottom: 0;
+}
+
+.boton {
+    display: block;
+    font-family: var(--fuenteHeading);
+    color: var(--blanco);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+    .boton {
+        display: inline-block;
+    }
+}
+
+.boton--primario {
+    background-color: var(--negro);
 }
