--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ a {
 
 h1, h2, h3, h4 {
     font-family: var(--fuenteHeading);
+    line-height: 1.2;
 }
 h1 {
     font-size: 4.8rem;
@@ -70,6 +71,7 @@ img {
     text-align: center;
 }
 
+/* ///////////////////////////////////////// */
 .header {
     background-image: url(../img/banner.webp);
     height: 60rem;
@@ -126,6 +128,7 @@ img {
     color: var(--blanco);
 }
 
+/* ///////////////////////////////////////// */
 /* main (index), article */
 @media (min-width: 768px) {
     .contenido-principal {
@@ -163,4 +166,36 @@ img {
 
 .boton--primario {
     background-color: var(--negro);
+}
+
+/* ///////////////////////////////////////// */
+/* aside (index) */
+.boton--secundario {
+    background-color: var(--primario);
+}
+
+.cursos {
+    list-style: none;
+}
+
+.widget-curso {
+    border-bottom: 1px solid var(--gris);
+}
+.widget-curso:last-of-type {
+    border: 0;
+    margin-bottom: none;
+}
+
+.widget-curso__label {
+    font-family: var(--fuenteHeading);
+    font-weight: 700;
+}
+
+.widget-curso__info {
+    font-weight: 400;
+}
+
+.widget-curso__label,
+.widget-curso__info {
+    font-size: 2rem;
 }
