--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,7 @@ body {
 /* ///////////////////////////////////////// */
 /* Globales */
 .contenedor {
-    max-width: 120rem;
-    width: 90%;
+    width: min(90%, 120rem); /* aplica el valor minimo de los 2 valres */
     margin: 0 auto;
 }
 
@@ -98,6 +97,9 @@ img {
         justify-content: space-between;
         align-items: center;
     }
+}
+.barra{
+    padding-top: 4rem;
 }
 
 /* Logo */
@@ -198,4 +200,12 @@ img {
 .widget-curso__label,
 .widget-curso__info {
     font-size: 2rem;
+}
+
+/* ///////////////////////////////////////// */
+/* footer */
+.footer {
+    background-color: var(--negro);
+    padding-bottom: 3rem;
+    margin-top: 4rem;
 }
