CREATE cursos.html with new main content

--- a/css/style.css
+++ b/css/style.css
@@ -188,17 +188,22 @@ img {
     margin-bottom: none;
 }
 
-.widget-curso__label {
+/* lebel's generales */
+.widget-curso__label,
+.curso__label {
     font-family: var(--fuenteHeading);
     font-weight: 700;
 }
 
-.widget-curso__info {
+.widget-curso__info,
+.curso__informacion {
     font-weight: 400;
 }
 
 .widget-curso__label,
-.widget-curso__info {
+.widget-curso__info,
+.curso__label,
+.curso__informacion {
     font-size: 2rem;
 }
 
@@ -208,6 +213,23 @@ img {
     .sobre-nosotros {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+/* ///////////////////////////////////////// */
+/* main (cursos) */
+.curso {
+    padding: 3rem 0;
+    border-bottom: 1px solid var(--gris);
+}
+.curso:last-of-type {
+    border: 0;
+}
+@media (min-width: 768px) {
+    .curso {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
         column-gap: 2rem;
     }
 }
