--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,10 @@ img {
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 2rem;
+    border: none;
+}
+.boton:hover {
+    cursor: pointer;
 }
 @media (min-width: 768px) {
     .boton {
@@ -232,6 +236,41 @@ img {
         grid-template-columns: 1fr 2fr;
         column-gap: 2rem;
     }
+}
+
+/* ///////////////////////////////////////// */
+/* Contacto */
+.contacto-bg {
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.formulario {
+    background-color: var(--blanco);
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 5rem;
+}
+
+.campo {
+    display: flex;
+    margin-bottom: 2rem;
+}
+
+.campo__label {
+    flex: 0 0 9rem; /* factorDeCrecimiento | factorDeDisminusión | width */
+    text-align: right;
+    padding-right: 2rem;
+}
+
+.campo__field {
+    flex: 1;
+    border: 1px solid var(--gris);
+}
+.campo__field--textarea {
+    height: 20rem;
 }
 
 /* ///////////////////////////////////////// */
